--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Index</title>
-    <link rel="stylesheet" type="text/css" href="static/style.css">
-  </head>
-  <body>
-this is the index
-  </body>
-</html>
+{% extends "layout.html" %}
+{% block body %}
+
+test
+
+
+
+{% endblock %}
