--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="utf-8">
       <link rel="stylesheet" type="text/css" href="static/style.css">
+      <script src="static/js/jquery-3.2.1.min.js"
     <title>Stormy Guerra</title>
   </head>
-  <body>layout
+  <body>
+    <h1>Logo here</h1>
+    <nav>
+      NAV HERE <a href='about'>About</a>
+    </nav>
+    {% block body %}{% endblock %}
   </body>
 </html>
